--- a/package.json
+++ b/package.json
@@ -16,7 +16,24 @@
     "url": "https://github.com/vitorblz/husky-prettier-eslint/issues"
   },
   "homepage": "https://github.com/vitorblz/husky-prettier-eslint#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
-    "husky": "^3.1.0"
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.4.3",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
   }
 }
